[package]
authors = ["Tobin Yehle <tobinyehle@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "led-matrix-hello"
version = "0.1.0"

[dependencies]
atsamd21g18a = ""
embedded-hal = ""
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
feather_m0 = { version="0.6", features=[] }
heapless = "0.5"
nb = "0.1"
panic-halt = "0.2.0"

[dependencies.matrix-display]
version = "^0"
git = "https://github.com/tyehle/led-matrix-driver.git"
rev = "ba8fef7"
# path = "../matrix-display"

# this lets you use `cargo fix`!
[[bin]]
name = "led-matrix-hello"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
